// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When clicking button it renders correctly 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <button
    className="MuiButtonBase-root-17 MuiButton-root-1 MuiButton-raised-7 MuiButton-raisedPrimary-8"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "marginBottom": 24,
        "marginRight": 24,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      foo-name
    </span>
    <span
      className="MuiTouchRipple-root-20"
    />
  </button>
  <input
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
</div>
`;

exports[`when uploading and no url renders correctly 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": 24,
        "marginRight": 24,
        "textAlign": "left",
      }
    }
  >
    <div
      className="MuiCircularProgress-root-27 MuiCircularProgress-colorPrimary-30 MuiCircularProgress-indeterminate-29"
      role="progressbar"
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-32"
        viewBox="0 0 50 50"
      >
        <circle
          className="MuiCircularProgress-circle-33 MuiCircularProgress-circleIndeterminate-35"
          cx={25}
          cy={25}
          fill="none"
          r={20}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  <input
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
</div>
`;

exports[`when uploading renders correctly 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    style={
      Object {
        "marginBottom": 24,
        "marginRight": 24,
        "textAlign": "left",
      }
    }
  >
    <div
      className="MuiCircularProgress-root-27 MuiCircularProgress-colorPrimary-30 MuiCircularProgress-indeterminate-29"
      role="progressbar"
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-32"
        viewBox="0 0 50 50"
      >
        <circle
          className="MuiCircularProgress-circle-33 MuiCircularProgress-circleIndeterminate-35"
          cx={25}
          cy={25}
          fill="none"
          r={20}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
  <input
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
</div>
`;

exports[`with initial state renders correctly 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <button
    className="MuiButtonBase-root-17 MuiButton-root-1 MuiButton-raised-7 MuiButton-raisedPrimary-8"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "marginBottom": 24,
        "marginRight": 24,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      foo-text
    </span>
    <span
      className="MuiTouchRipple-root-20"
    />
  </button>
  <input
    onChange={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    type="file"
  />
</div>
`;
